--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* body {
+body {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,7 +12,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-} */
+}
+
 .kzui-select {
   position: relative;
   display: inline-block;
