--- a/src/index.css
+++ b/src/index.css
@@ -25,13 +25,16 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid #ccc;
+  border: 1px solid black;
   padding: 10px;
   cursor: pointer;
   background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
 }
 
-.kzui-select--disabled .kzui-select__control {
+.kzui-select--disabled 
+.kzui-select__control {
   background-color: #f5f5f5;
   cursor: not-allowed;
 }
@@ -60,7 +63,9 @@ body {
   width: 100%;
   padding: 10px;
   margin-top: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .kzui-select__menu {
